# kd-tree-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: build.rs  insert.rs
src/: dim.rs  lib.rs  point.rs  tests.rs
