# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kd-tree-rs"
version = "0.1.0"
edition = "2021"
authors = ["Alexander De Furia <defuria.alexander@gmail.com>"]
homepage = "https://github.com/AlexanderDefuria/kd-tree-rs"
repository = "https://github.com/AlexanderDefuria/kd-tree-rs"
license = "MIT"
readme = "README.md"
description = "A Rust implementation of a k-d tree."
publish = true